feat: added score parameter to admin areas list api and updated api documentation and tests
